@@ -119,7 +119,7 @@ sub isMatchingType {
    catch {
       $_ =~ m{ \Qnot a known type constraint\E }mx
          and throw KnownType, [ $type_name ];
-      throw "${_}";
+      throw "${_}"; # uncoverable statement
    };
 
    return $type->check( $v ) ? TRUE : FALSE;
